fixed main shoe image to not stretch wierd when the screen size changes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,10 +48,7 @@ h2 {
 }
 
 .header-img {
-  display: flex;
-  flex-direction: row;
   width: 100%;
-  height: 100vh;
 }
 
 .greetings {
